--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     />
     <meta name="author" content="Abdur Rahman Khan" />
     <title>Portofilio</title>
-    <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+<!--     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" /> -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
