--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,10 @@
       content="Abdur Rahman Khan is a Software Engineer. He is right now working on some personal projects and looking for a software engineer job."
     />
     <meta name="author" content="Abdur Rahman Khan" />
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+<!--     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" /> -->
     <link
       rel="icon"
       type="image/png"
