--- a/projects.html
+++ b/projects.html
@@ -42,9 +42,9 @@
             <div class="col-xs-12">
               <h4 class="pname">Search Engine</h4>
               <p class="pdesc">
-                A search engine using three different models: BI model, tf-idf vector model, language model and elastic search.
-                Implemented text classification using KNN and Rocchio algorithm.
-                Evaluated all the models using metrics like precision, recall, MAP and running time per query.
+                A search engine that utilizes three distinct models: the BI model, the tf-idf vector model and the language model.
+                Text classification was implemented using the KNN classifier and Rocchio classifier.
+                All models were evaluated using criteria like as precision, recall, MAP, and execution time per query along with elastic search model.
               </p>
               <p class="ptech">
                 Web Technologies used:
