Trophy Image Modified

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="acheivements flex">
           <div class="row">
             <div class="col-xs-3">
-              <img src="images/trophy.png" alt="Trophy" class="icon" />
+              <img src="images/trophy.png" style="width:95px;" alt="Trophy" class="" />
             </div>
             <div class="col-xs-9">
               <h4>Acheivements</h4>
