Trophy Image Modified

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="row">
               <div class="col-xs-12 text-center">
                 <a href="index.html"
-                  ><img src="images/asd.jpg" alt="Abdur" class="icon" id="logoIcon"
+                  ><img src="images/asd.jpg" alt="Abdur" style="width:130px;" class="icon" id="logoIcon"
                 /></a>
               </div>
               <div class="col-xs-12 text-center nLWrapper">
@@ -49,7 +49,7 @@
                 Smart India Hackathon 2022- Finalist <br/>
                 ACM-ICPC 2020- Regionalist <br/>
                 Deciphered Lab CTF 2020- 3rd Rank <br/>
-                Leetcode- Badge Knight Rating 2000+ 
+                Leetcode- Badge: Knight | Rating: 2000+ 
                 <!-- Google HashCode 2020- Rank 1333 WorldWide <br/>
                 Google KickStart - Rank 1125 WorldWide -->
               </p>
