--- a/acheivements.html
+++ b/acheivements.html
@@ -36,7 +36,7 @@
             </div>
           </header>
         </section>
-        <h1>Page Under Maintainanence</h1>
+        <!-- <h1>Page Under Maintainanence</h1> -->
         <!-- Smart India Hackathon 2022- Finalist <br/>
                 ACM-ICPC 2020- Regionalist <br/>
                 Deciphered Lab CTF 2020- 3rd Rank <br/>
@@ -49,16 +49,18 @@
             <div class="col-xs-12">
               <h4 class="pname">Smart India Hackathon</h4>
               <p class="pdesc">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti amet cum, fugit sit impedit nulla possimus tenetur aliquam nihil magni libero! Repellat, ut iure fugit reiciendis unde, illo at repellendus, veritatis autem soluta adipisci excepturi odio. Dignissimos illo consectetur accusamus, magnam dolores ratione praesentium ipsam, aliquid, ullam consequatur itaque. Illo.
+                Smart India Hackathon is the nationwide largest Hackathon conducted by government of India, with a cash prize of 5+ Crores.
+                I was the team Leader of Gravitas Team in SIH 2022. Our team qualified for finals of SIH, which is held in Chennai Tamil Nadu.
+                We worked on a project with National Institute of Ocean Technology (NIOT), Ministry of Earth Sciences (MoES).
               </p>
               <p class="ptech">
                 <span class="ptech">Finalist</span>
-              </p>
+              <!-- </p>
               <p class="cpara">
                 <a href="https://github.com/Abdur-Rahman-Khan/InformationRetrieval" class="pcode" target="_blank"
                   >Certificate</a
                 >
-              </p>
+              </p> -->
             </div>
           </div>
         </section>
@@ -68,15 +70,15 @@
             <div class="col-xs-12">
               <h4 class="pname">ICPC</h4>
               <p class="pdesc">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem nulla, facilis animi tempore in, culpa quaerat ut saepe voluptatibus est tenetur odio nobis dignissimos ipsa error temporibus ex. Inventore asperiores laborum dolore doloribus ducimus quos illum in, facere deleniti autem nisi, possimus dolores voluptate ab incidunt praesentium, minus nostrum eius velit excepturi! Facere dignissimos fuga nostrum vitae quos quo voluptatibus velit deserunt quis repudiandae? Facere ad aut in magni vel porro quae recusandae officia. Ab iste, eius quos consequuntur explicabo rem fuga eum! Minima nemo aut qui, enim iste, autem, aspernatur excepturi facilis error eos reiciendis? Impedit architecto at dignissimos!
-              </p>
+                The ICPC International Collegiate Programming Contest, known as the ICPC, is an annual multi-tiered competitive programming competition among the universities of the world. Directed by ICPC Executive Director and Baylor Professor Dr. William B. Poucher, the ICPC operates autonomous regional contests covering six continents culminating in a global World Finals every year.               </p>
+                Our Team NP-Compelete passed intials round of contest and got qualified for regionals.
               <p class="ptech">
                 <span class="ptech">Regionalist</span>
               </p>
-              <p class="cpara">
+              <!-- <p class="cpara">
                 <a href="https://github.com/Abdur-Rahman-Khan/Network-Monitoring-tool" class="pcode" target="_blank"
                   >Certificate</a
-                >
+                > -->
               </p>
             </div>
           </div>
@@ -87,16 +89,16 @@
               <div class="col-xs-12">
                 <h4 class="pname">Leetcode -Knight</h4>
                 <p class="pdesc">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem nulla, facilis animi tempore in, culpa quaerat ut saepe voluptatibus est tenetur odio nobis dignissimos ipsa error temporibus ex. Inventore asperiores laborum dolore doloribus ducimus quos illum in, facere deleniti autem nisi, possimus dolores voluptate ab incidunt praesentium, minus nostrum eius velit excepturi! Facere dignissimos fuga nostrum vitae quos quo voluptatibus velit deserunt quis repudiandae? Facere ad aut in magni vel porro quae recusandae officia. Ab iste, eius quos consequuntur explicabo rem fuga eum! Minima nemo aut qui, enim iste, autem, aspernatur excepturi facilis error eos reiciendis? Impedit architecto at dignissimos!
+                    Actively participated on Leetcode which is a platform to practise data structures and algorithms. Currently I got Knight badge on leetcode after surpassing certain rating.
                 </p>
                 <p class="ptech">
                   <span class="ptech">Rating: 2000+</span>
                 </p>
-                <p class="cpara">
+                <!-- <p class="cpara">
                   <a href="https://github.com/Abdur-Rahman-Khan/Network-Monitoring-tool" class="pcode" target="_blank"
                     >Certificate</a
                   >
-                </p>
+                </p> -->
               </div>
             </div>
           </section>
@@ -106,16 +108,16 @@
               <div class="col-xs-12">
                 <h4 class="pname">DRDO's Robotics Challenge</h4>
                 <p class="pdesc">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem nulla, facilis animi tempore in, culpa quaerat ut saepe voluptatibus est tenetur odio nobis dignissimos ipsa error temporibus ex. Inventore asperiores laborum dolore doloribus ducimus quos illum in, facere deleniti autem nisi, possimus dolores voluptate ab incidunt praesentium, minus nostrum eius velit excepturi! Facere dignissimos fuga nostrum vitae quos quo voluptatibus velit deserunt quis repudiandae? Facere ad aut in magni vel porro quae recusandae officia. Ab iste, eius quos consequuntur explicabo rem fuga eum! Minima nemo aut qui, enim iste, autem, aspernatur excepturi facilis error eos reiciendis? Impedit architecto at dignissimos!
+                    Participated in InterIIT Tech meet where the problem statement was given by DRDO for vision based obstacle avoidance for drones.
                 </p>
                 <p class="ptech">
                   <span class="ptech">Rank: 9</span>
                 </p>
-                <p class="cpara">
+                <!-- <p class="cpara">
                   <a href="https://github.com/Abdur-Rahman-Khan/Network-Monitoring-tool" class="pcode" target="_blank"
                     >Certificate</a
                   >
-                </p>
+                </p> -->
               </div>
             </div>
           </section>
@@ -125,16 +127,16 @@
               <div class="col-xs-12">
                 <h4 class="pname">CTF- Deciphered Labs</h4>
                 <p class="pdesc">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem nulla, facilis animi tempore in, culpa quaerat ut saepe voluptatibus est tenetur odio nobis dignissimos ipsa error temporibus ex. Inventore asperiores laborum dolore doloribus ducimus quos illum in, facere deleniti autem nisi, possimus dolores voluptate ab incidunt praesentium, minus nostrum eius velit excepturi! Facere dignissimos fuga nostrum vitae quos quo voluptatibus velit deserunt quis repudiandae? Facere ad aut in magni vel porro quae recusandae officia. Ab iste, eius quos consequuntur explicabo rem fuga eum! Minima nemo aut qui, enim iste, autem, aspernatur excepturi facilis error eos reiciendis? Impedit architecto at dignissimos!
+                  CTF-Capture-the-Flag events are computer security competitions. Our team participated in intra IIT CTF contest hosted by Deciphered Labs and got 3rd position overall.
                 </p>
                 <p class="ptech">
                   <span class="ptech">Rank: 3</span>
                 </p>
-                <p class="cpara">
+                <!-- <p class="cpara">
                   <a href="https://github.com/Abdur-Rahman-Khan/Network-Monitoring-tool" class="pcode" target="_blank"
                     >Certificate</a
                   >
-                </p>
+                </p> -->
               </div>
             </div>
           </section>
@@ -144,16 +146,16 @@
               <div class="col-xs-12">
                 <h4 class="pname">Intra-IIT Chess Competetion</h4>
                 <p class="pdesc">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem nulla, facilis animi tempore in, culpa quaerat ut saepe voluptatibus est tenetur odio nobis dignissimos ipsa error temporibus ex. Inventore asperiores laborum dolore doloribus ducimus quos illum in, facere deleniti autem nisi, possimus dolores voluptate ab incidunt praesentium, minus nostrum eius velit excepturi! Facere dignissimos fuga nostrum vitae quos quo voluptatibus velit deserunt quis repudiandae? Facere ad aut in magni vel porro quae recusandae officia. Ab iste, eius quos consequuntur explicabo rem fuga eum! Minima nemo aut qui, enim iste, autem, aspernatur excepturi facilis error eos reiciendis? Impedit architecto at dignissimos!
-                </p>
+                    Played team for Black Wasp team in Prayatna 4.0 which is intra IIT sports function, and we won the chess finals against 8 teams.
+                    </p>
                 <p class="ptech">
                   <span class="ptech">Winner</span>
                 </p>
-                <p class="cpara">
+                <!-- <p class="cpara">
                   <a href="https://github.com/Abdur-Rahman-Khan/Network-Monitoring-tool" class="pcode" target="_blank"
                     >Certificate</a
                   >
-                </p>
+                </p> -->
               </div>
             </div>
           </section>
@@ -163,16 +165,15 @@
               <div class="col-xs-12">
                 <h4 class="pname">Google HashCode</h4>
                 <p class="pdesc">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem nulla, facilis animi tempore in, culpa quaerat ut saepe voluptatibus est tenetur odio nobis dignissimos ipsa error temporibus ex. Inventore asperiores laborum dolore doloribus ducimus quos illum in, facere deleniti autem nisi, possimus dolores voluptate ab incidunt praesentium, minus nostrum eius velit excepturi! Facere dignissimos fuga nostrum vitae quos quo voluptatibus velit deserunt quis repudiandae? Facere ad aut in magni vel porro quae recusandae officia. Ab iste, eius quos consequuntur explicabo rem fuga eum! Minima nemo aut qui, enim iste, autem, aspernatur excepturi facilis error eos reiciendis? Impedit architecto at dignissimos!
-                </p>
+                    Hash Code is a global team programming competition organized by Google. The participants work in teams of 2-4 people solving a programming challenge inspired by software engineering at Google.                </p>
                 <p class="ptech">
                   <span class="ptech">Rank: 1333</span>
                 </p>
-                <p class="cpara">
+                <!-- <p class="cpara">
                   <a href="https://github.com/Abdur-Rahman-Khan/Network-Monitoring-tool" class="pcode" target="_blank"
                     >Certificate</a
                   >
-                </p>
+                </p> -->
               </div>
             </div>
           </section>
@@ -182,16 +183,15 @@
               <div class="col-xs-12">
                 <h4 class="pname">Google KickStart</h4>
                 <p class="pdesc">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem nulla, facilis animi tempore in, culpa quaerat ut saepe voluptatibus est tenetur odio nobis dignissimos ipsa error temporibus ex. Inventore asperiores laborum dolore doloribus ducimus quos illum in, facere deleniti autem nisi, possimus dolores voluptate ab incidunt praesentium, minus nostrum eius velit excepturi! Facere dignissimos fuga nostrum vitae quos quo voluptatibus velit deserunt quis repudiandae? Facere ad aut in magni vel porro quae recusandae officia. Ab iste, eius quos consequuntur explicabo rem fuga eum! Minima nemo aut qui, enim iste, autem, aspernatur excepturi facilis error eos reiciendis? Impedit architecto at dignissimos!
-                </p>
+                    Kick Start is a global online coding competition, consisting of three-hour rounds of a variety of algorithmic challenges designed by Google engineers. Participants can compete in one or all online rounds held throughout the year, and will have the opportunity to develop and grow their programming abilities while getting a glimpse into the technical skills needed for a career at Google                </p>
                 <p class="ptech">
                   <span class="ptech">Rank: 1125</span>
                 </p>
-                <p class="cpara">
+                <!-- <p class="cpara">
                   <a href="https://github.com/Abdur-Rahman-Khan/Network-Monitoring-tool" class="pcode" target="_blank"
                     >Certificate</a
                   >
-                </p>
+                </p> -->
               </div>
             </div>
           </section>
